# NanoPrint

./: .gitignore  COMPLETE_BUILD_PROMPT.md  NANOFICHE_README.md  README.md  TEST_INSTRUCTIONS.md  build_macos_app.sh  build_windows_exe.sh  create_test_files.py  debug_placement.py  mr_ha.org  nanofiche.py  nanoprint.py  pyproject.toml  requirements.txt  test_1033_fix.py  test_cli_logging.py  test_dimensions.py  test_dpi_optimization.sh  test_full_render.py  test_gui_logging.py  test_gui_logging_simple.py  test_isolated_functions.py  test_large_document.sh  test_logging.py  test_logging_simple.py  test_nanofiche.py  test_overflow_scenario.py  test_renderer.py  test_svg_parsing.py
.claude/: settings.local.json
.github/workflows/: build-windows.yml  linux-appimage.yml  windows-build.yml
nanofiche/: __init__.py  core.py  gui.py  logger.py  renderer.py
nanorosetta/: cli.py  geometry.py  gui.py  layout.py  optimized_packing.py  pixel_layout.py  render.py  simple_bins.py  units.py
packaging/: README_PACKAGING.md
vedabase.io/: index.html  robots.txt
vedabase.io/cdn-cgi/l/: email-protection
vedabase.io/en/contact/: index.html
vedabase.io/en/donate/: index.html
vedabase.io/en/privacy-policy/: index.html
vedabase.io/en/search/: index.html  index.html?hierarchy=%2F0001%2F0001%2F0001%2F0001  index.html?hierarchy=%2F0001%2F0001%2F0001%2F0002  index.html?hierarchy=%2F0001%2F0001%2F0001%2F0006  index.html?hierarchy=%2F0001%2F0001%2F0001%2F0007  index.html?hierarchy=%2F0001%2F0001%2F0001%2F0008  index.html?hierarchy=%2F0001%2F0001%2F0001%2F0009  index.html?query=hari*  (+49 more)
(+29 files in other folders)
